@@ -308,6 +308,8 @@
                                     <arg line="--java-options --add-opens=java.base/java.lang.ref=ALL-UNNAMED" />
                                     <arg line="--java-options --add-opens=java.base/java.security=ALL-UNNAMED" />
                                     <arg line="--java-options -Xmx1024m" />
+                                    <arg line="--java-options -XX:+UseZGC" />
+                                    <arg line="--java-options -Xlog:gc:file=${user.home}/Library/Logs/jvm-gc.log:utctime,pid:filecount=1,filesize=1m" />
                                     <arg line="--java-options -Dopen.dolphin.build.timestamp=${buildDate}" />
                                 </exec>
                             </target>
